@@ -27,6 +27,7 @@ import os
 
 def pref_init(pref):
     pref.svn_exe = ''
+    pref.svn_log_history = []
 Mixin.setPlugin('preference', 'init', pref_init)
 
 def add_pref(preflist):
@@ -119,6 +120,7 @@ def OnVC_Settings(win, event):
     if dlg.ShowModal() == wx.ID_OK:
         values = dlg.GetValue()
         win.pref.svn_exe = values['svn_exe']
+        print values['svn_exe']
         win.pref.save()
     dlg.Destroy()
 Mixin.setMixin('dirbrowser', 'OnVC_Settings', OnVC_Settings)
